--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <head>
 <title>Home | Jovark Assistant</title>
 </head>
-<body>
-<html>
-<title>Home | Jovark Assistant</title>
-<body></body>
-</html>
-</body>
+  <body><p>
+    <iframe src="https://trinket.io/embed/python/4a606d93c4?runOption=run&start=result&showInstructions=true" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen>
+    </iframe></p></body>
 </html>
